<resources>
    <string name="app_name">Android Labs</string>

    <string name="text_email">Enter your email address:</string>
    <string name="hint_email">Type email here</string>
    <string name="text_password">Type your password: </string>
    <string name="btn_login">LOGIN</string>

    <string name="profile_title">Your profile</string>
    <string name="profile_name_text">Your name:</string>
    <string name="profile_name_hint">Enter your name</string>
    <string name="profile_email_text">Your email: </string>
    <string name="profile_email_hint">Enter your email</string>
    <string name="profile_pic_text">Your picture: </string>
    <string name="profile_btn_text">Click the button above to take a picture</string>
    <string name="profile_btn_chat">Go to chat</string>

    <string name="profile_btn_weather">check weather</string>
    <string name="profile_btn_toolbar">Go to toolbar</string>
    <string name="chat_receive">Receive</string>
    <string name="chat_send">Send</string>
    <string name="chat_hint">Type here</string>
</resources>
