<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <ListView
        android:id="@+id/chat_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


    <GridLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:columnCount="3"
        android:rowCount="1"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_send"
            android:text="@string/chat_send"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="3"
            android:hint="@string/chat_hint"
            android:id="@+id/newText"
            >

        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_receive"
            android:text="@string/chat_receive"/>
    </GridLayout>




</RelativeLayout>